Version ClaSS-1.0.61 release (2014/01/03)
-------------------------------------------

The new_teacher import now allows the PIN to be included in the file.





Version ClaSS-1.0.60 release (2013/12/19)
-------------------------------------------

Ldap sync is now improved, in the clientid ou (same for enrolment) must
already exist a User group named 'users', then all the users are updated
as member for that group - for Schoolbag sync

Added file upload for report wrappers in Report - other_id is wrapper_id

Working on mail templates and tags.

Improved performance of fetchAssessments_short.

New db index for eidsid_id added to the comments table.

Added a count_student_assessments function.

Small fix to the elgg_list_files function to cope with empty epfuids.



Version ClaSS-1.0.59 release (2013/12/06)
-------------------------------------------

Browse button added to file uploader, when a file is uploaded the user
is redirected to last page and now big photographs are resized

Added export button for SEN lists.

New message for medical updates as cron jobs.

New student event and message for enrolment status update as cron jobs.

Added medical_log and student_event tables patches.

Working on adding skill log file links to reports.


Version ClaSS-1.0.58 release (2013/11/12)
-------------------------------------------

Added a List button to the enrolments_list page which generates the same
list in the InfoBook table.

Another fix for timing issues with the document drop.



Version ClaSS-1.0.57 release (2013/11/8)
-------------------------------------------

Tiny fix to the overall total in the report_merits_list page.

New merit option to record a second category (example being used for
core school values).

Improved the report_merits_list to allow breakdown of merits to switch
between core values and activities.

Changed the dislpay of student names in the MarkBook. Now includes
middlenames and prefrred forename.
